--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,8 +24,11 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          command: test
-          args: '--skip-unresolved -d  --sarif'
+          args: '-skip-unresolved -d --sarif-file-output=snyk.sarif'
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: snyk.sarif
           
   zap_scan:
     runs-on: ubuntu-latest
@@ -42,6 +45,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'owasp/zap2docker-stable'
-          target: 'https://teste.com.br'
+          target: 'https://juice-shop.herokuapp.com/'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
