--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,35 +5,34 @@ permissions:
   actions: read
   contents: read
   
-jobs: 
-  snyk:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: master
+ jobs: 
+#  snyk:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#        with:
+#          ref: master
 
-      - name: Pip Install
-        run: |
-          pip install -r requirements.txt
+#      - name: Pip Install
+#        run: |
+#          pip install -r requirements.txt
 
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/python@master
-        continue-on-error: true # To make sure that SARIF upload gets called
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: '-skip-unresolved -d --sarif-file-output=snyk.sarif'
-      - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: snyk.sarif
+#      - name: Run Snyk to check for vulnerabilities
+#        uses: snyk/actions/python@master
+#        continue-on-error: true # To make sure that SARIF upload gets called
+#        env:
+#          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+#        with:
+#          args: '-skip-unresolved -d --sarif-file-output=snyk.sarif'
+#      - name: Upload result to GitHub Code Scanning
+#        uses: github/codeql-action/upload-sarif@v2
+#        with:
+#          sarif_file: snyk.sarif
           
   zap_scan:
     runs-on: ubuntu-latest
     name: zap
-    needs: snyk
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -41,10 +40,11 @@ jobs:
           ref: master
 
       - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.6.1
+        uses: zaproxy/action-baseline@v0.10.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: 'owasp/zap2docker-stable'
+        #  docker_name: 'owasp/zap2docker-stable'
+          fail_action: true
           target: 'https://juice-shop.herokuapp.com/'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
